tooling/nargo_cli/tests/snapshots/execution_success/regression_9594/execute__tests__dead_witnesses.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: dead_witnesses
---
Found some dead witnesses in function 0:
 - Dead witnesses in program inputs:
  - a (witness w0)
  - b (witness w1)
  - c (witness w2)
Dead witnesses found in circuit
