tooling/nargo_cli/tests/snapshots/execution_success/regression_9594/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: bool, mut b: bool, c: i32) -> pub i32 {
    if a {
        let mut e: [&mut bool] = [].as_vector();
        b = *e[1132210792_u32 % e.len()];
        c
    } else {
        2_i32
    }
}
