tooling/nargo_cli/tests/snapshots/execution_success/regression_9594/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u1, v1: u1, v3: i32):
    v2 = allocate -> &mut u1
    store v1 at v2
    (no terminator instruction)
}
[regression_9594] Circuit output: 2
